# anki-mcat-ios

./: .gitignore  README.md
AnkiApp/: AnkiSpeedrun-Info.plist  AnkiSpeedrun.entitlements  project.yml
AnkiApp/AnkiSpeedrunUITests/: AnkiSpeedrunUITests.swift
AnkiApp/AnkiWidget/: AnkiWidget.entitlements  AnkiWidget.swift
AnkiApp/Resources/: ftl_index.json
AnkiApp/Resources/reviewer/: mathjax.css  reviewer.js  reviewer_extras.css
AnkiApp/Resources/sveltekit/: index.html
AnkiApp/Resources/sveltekit/_app/: version.json
AnkiApp/Resources/sveltekit/_app/immutable/assets/: 0.B-RkoCHw.css  (+24 more)
AnkiApp/Shared/: AnkiWidgetSnapshot.swift
AnkiApp/Sources/: AdvancedSettingsView.swift  AnkiSpeedrunApp.swift  AnkiStore.swift  AnkiWebMethods.swift  AnkiWebPage.swift  ApkgImportOptionsView.swift  AppTheme.swift  CSVImportView.swift  CardAudioPlayer.swift  CardBrowserView.swift  CardInfoView.swift  CardTemplateEditorView.swift  ChangeNotetypeView.swift  ContentView.swift  ControlsSettingsView.swift  CoverageView.swift  CustomStudyView.swift  DeckOptionsView.swift  DeckOverviewView.swift  DrawingCanvasView.swift  FilteredDeckView.swift  Haptics.swift  HomeView.swift  ImageOcclusionView.swift  ImportExportView.swift  LibraryView.swift  Loc.swift  LoginView.swift  ManageNotetypesView.swift  MediaPickers.swift  NoteEditorView.swift  NotePreviewView.swift  NotetypeFieldsEditorView.swift  OnboardingView.swift  ReadinessDashboardView.swift  ReviewReminders.swift  ReviewerView.swift  RichFieldView.swift  SettingsView.swift  SharedDecksView.swift  (+5 more)
AnkiApp/Sources/Assets.xcassets/AnkiLoginLogo.imageset/: Contents.json
AnkiApp/Sources/DesignSystem/: ButtonStyles.swift  DesignSystemPreviews.swift  StatRow.swift  Surface.swift  Theme.swift
AnkiApp/Sources/MCAT/: MCATOutline.swift  MCATReadinessDemoDeck.swift  MCATSeedDeck.swift  WeakTopic.swift
AnkiCore/: Cargo.toml  build-xcframework.sh  rust-toolchain.toml  smoketest.c
AnkiCore/include/: ankicore.h  module.modulemap
AnkiCore/src/: lib.rs
AnkiKit/: Package.swift
AnkiKit/Sources/AnkiKit/: Backend.swift  BackendAutoAdvance.swift  BackendBackups.swift  BackendBrowser.swift  BackendBrowserSidebar.swift  BackendConfig.swift  BackendCoverage.swift  BackendCustomStudy.swift  BackendDeckManagement.swift  BackendDecks.swift  BackendFilteredDecks.swift  BackendI18n.swift  BackendImportExport.swift  BackendMaintenance.swift  BackendMedia.swift  BackendNotes.swift  BackendNotetypes.swift  BackendPointsAtStake.swift  BackendReadiness.swift  BackendReview.swift  BackendReviewerActions.swift  BackendStats.swift  BackendSync.swift  BackendUndo.swift  BackupFile.swift  BrowserSidebarTree.swift  GestureConfig.swift  NoteFieldsCheck.swift  NotetypeEditing.swift  ReviewReminderSchedule.swift  SyncKeychain.swift  TagSuggestions.swift
AnkiKit/Tests/AnkiKitTests/: AnkiKitTests.swift
deploy/syncserver/: Dockerfile  README.md  entrypoint.sh  fly.toml
docs/: IOS_PARITY_PLAN.md  score-models.md
tools/: gen_ftl_index.py
(+57 files in other folders)
