[package]
name = "ankicore-ffi"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "C-ABI bridge exposing Anki's Rust core (rslib) to Swift/iOS"

[lib]
name = "ankicore_ffi"
# staticlib for iOS (linked into the app). cdylib is only useful for host-side
# testing and fails to link for iOS device, so it's intentionally omitted.
crate-type = ["staticlib"]

[dependencies]
# Anki's Rust core, consumed from the desktop fork (shared engine).
# `rustls` selects the pure-Rust TLS stack with bundled webpki roots. This is
# required on iOS: the default `native-tls` (Security.framework) backend links
# but provides no working HTTPS transport for reqwest on `aarch64-apple-ios`,
# so on-device sync fails; rustls (what Anki's own mobile build uses) works on
# both device and Simulator without depending on the OS trust store.
anki = { path = "../../anki-desktop/main/rslib", features = ["rustls"] }
# rslib relies on workspace-level tokio feature unification (notably io-util).
# Depend on tokio directly so those features are enabled in this standalone build.
tokio = { version = "1", features = ["full"] }
